fixed the text wrap bug.

--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ video{
     transition: 0.5s ease-in;
 }
 #big{
-    font-size: 12vh;
+    font-size: 5vw;
     text-align: center;
     transition: 0.5s ease-in;
 }
@@ -356,14 +356,14 @@ video{
     transition: 0.5s ease-in;
 }
 .ques{
-    font-size: 12vh;
+    font-size: 5.8vw;
     transition: 0.5s ;
 }
 .ans{
     font-weight: 100;
     padding-left: 20px;
     padding-top: 20px;
-    font-size: 2vh;
+    font-size: 1vw;
     transition: 0.5s ;
 }
 .ans a{
@@ -376,7 +376,7 @@ video{
     padding-top: 20px;
 }
 .question:hover .ans{
-    font-size: 12vh;
+    font-size: 5.8vw;
     font-weight: 500;
     padding-top: 2px;
 }
